# django-suap-auth

./: AUTENTICACAO_RESUMO.md  CORRECAO_APLICADA.md  DIAGNOSTICO_COMPLETO.md  INICIO_RAPIDO.md  LOGOUT_CORRIGIDO.md  README.md  RESUMO_DIAGNOSTICO.md  SECURITY.md  SOLUCAO_FINAL.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
django_suap_auth/: __init__.py  apps.py  backends.py  client.py  exceptions.py  urls.py  utils.py  views.py
django_suap_auth/templates/django_suap_auth/: login.html
docs/: attribute-mapping.md  auth-flow.md  configuration.md  development.md  index.md  installation.md  release.md  sandboxes.md  scopes.md
sandbox/: DIAGNOSTIC_PT-BR.md  README_PT-BR.md  TROUBLESHOOTING_PT-BR.md
sandbox/django52/: .env.example  manage.py  requirements.txt  test_auth_flow.py  test_suap_config.py  watch_logs.py
sandbox/django52/config/: settings.py  urls.py  wsgi.py
sandbox/django52/home/templates/home/: base.html  dashboard.html  home.html  index.html
sandbox/django60/: .env.example  requirements.txt  test_auth_flow.py  test_suap_config.py  watch_logs.py
sandbox/django60/config/: settings.py
sandbox/django60/home/: urls.py  views.py
sandbox/django60/home/templates/home/: dashboard.html  home.html  index.html
tests/: settings.py  test_backends.py  test_client.py  test_utils.py  test_views.py  urls.py
